content/v1.1/Additional Information/example-projects.md
---
title: "Example Projects"
slug: "example-projects"
hidden: false
createdAt: "2020-04-21T21:16:46.384Z"
updatedAt: "2020-09-28T14:22:40.513Z"
---
# Hackathons

The following is a list of selected hackathon projects utilizing Chainlinked contracts.

## ETHGlobal Hack Money

The <a href="https://ethglobal.online/" target="_blank" rel="noreferrer, noopener">Hack Money hackathon</a>, read our <a href="https://blog.chain.link/showcasing-the-winners-of-the-2020-hackmoney-virtual-hackathon/" target="_blank" > blog here! </a>

|Name|Description|GitHub|
|:---|:---|:---|
|**Genie**<br />🥇|A no-loss betting platform for gamers.|<a href="https://github.com/genie-platform" target="_blank" rel="noreferrer, noopener">Go</a>|
|**DefiDollar**<br />🥈|DefiDollar (DUSD) is a stablecoin backed by Curve Finance LP tokens.|<a href="https://github.com/defidollar/defidollar-core" target="_blank" rel="noreferrer, noopener">Go</a>|
|**CandyShop**<br />🥉|Lottery based arbitrage.|<a href="https://github.com/itsthecandyshop/" target="_blank" rel="noreferrer, noopener">Go</a>|

## ETHDenver 2020

Read our <a href="https://blog.chain.link/showcasing-the-winning-projects-from-the-ethdenver-2020-hackathon/" target="_blank" rel="noreferrer, noopener">blog post here</a>.

|Name|Description|GitHub|
|:---|:---|:---|
|**InsuraLink**<br />🥇|Data-driven insurance agreements that use Chainlink oracles to bridge IoT and smart contracts.|<a href="https://github.com/securedatalinks/insuralink-contracts" target="_blank" rel="noreferrer, noopener">Go</a>|
|**1x.ag**<br />🥈|Build leveraged trade positions across different lending platforms.|<a href="https://github.com/1x-ag/solidity-contracts" target="_blank" rel="noreferrer, noopener">Go</a>|
|**We Watch in Public Spaces**|Tracking system for calculating event attendance.|<a href="https://github.com/iainnash/ethdenver-we-watch-in-public" target="_blank" rel="noreferrer, noopener">Go</a>|

## Chainlink Virtual Hackathon 2019

Read our <a href="https://blog.chain.link/winners-of-the-chainlink-virtual-hackathon/" target="_blank" rel="noreferrer, noopener">blog post here</a>.

|Name|Description|GitHub|
|:---|:---|:---|
|**LinkPal**<br />🥇|A smart contract uses Chainlink oracles to confirm that the PayPal invoice has been paid.|<a href="https://github.com/vvoluom/LinkPal" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Cerebus Wallet**<br />🥈|Two-factor authorization for crypto transactions using phone push notifications.|<a href="https://github.com/MikaelLazarev/cerberus" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Flyt**<br />🥉|Flight insurance.|<a href="https://github.com/robin-thomas/flyt" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Link Total Return Swap**|A Defi platform which enables Chainlink Node Operators to hedge against LINK price volatility.|<a href="https://github.com/securedatalinks/LinkTRS" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Smart Marketing Campaigns**|Use Google Analytics data to make payments to marketing agencies.|<a href="https://github.com/Pega88/chainlink-smart-marketing-campaigns" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Steam Trader**|Trustless trading of digital items.|<a href="https://github.com/brent-riva/Steam-Trader" rel="noreferrer, noopener">Go</a>|
|**Contractor**|Constructor of smart contracts.|<a href="https://github.com/alekcangp/ChainLinkContractor" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Fiat Gateway**|Crypto Fiat Gateway on Ethereum using Chainlink Oracles|<a href="https://github.com/chatch/fiat-gateway" target="_blank" rel="noreferrer, noopener">Go</a>|
|**The Anti-Social Challenge**|Incentivize people to reduce their usage of social platforms.|<a href="https://github.com/raphpap/smart-inactivity-agreement" target="_blank" rel="noreferrer, noopener">Go</a>|

## ETHBerlin 2019

Read our <a href="https://blog.chain.link/showcasing-the-winners-of-the-etherlin-zwei-hackathon/" target="_blank" rel="noreferrer, noopener">blog post here</a>.

|Name|Description|GitHub|
|:---|:---|:---|
|**Chainlink \u2661 Augur**<br />🥇|Create derivatives based on the valuations of startups.|<a href="https://github.com/jasperdg/flux-ethberlinzwei" target="_blank" rel="noreferrer, noopener">Go</a>|
|**VollgasDAO**<br />🥈|Gas futures.|<a href="https://github.com/vollgasDao/vollGasDaoReact" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Etherflare**<br />🥉|Reward white hat hackers.|<a href="https://github.com/EtherFlareGraph/etherflare" target="_blank" rel="noreferrer, noopener">Go</a>|

## ETHNewYork 2019

Read our <a href="https://blog.chain.link/showcasing-the-winning-projects-from-the-ethnewyork-hackathon/" target="_blank" rel="noreferrer, noopener">blog post here</a>.

|Name|Description|GitHub|
|:---|:---|:---|
|**French Toast Kitty**<br />🥇|Interact with your Cryptokitty using real-world data.|<a href="https://github.com/frenchtoastkitty/contracts" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Blocksolid**|Donations that pay for Internet services in developing regions.|<a href="https://github.com/unicef-isp-manager/eth-new-york-2019" target="_blank" rel="noreferrer, noopener">Go</a>|

## ETHParis 2019

Read our <a href="https://blog.chain.link/the-winning-projects-from-ethparis-hackathon/" target="_blank" rel="noreferrer, noopener">blog post here</a>.

|Name|Description|GitHub|
|:---|:---|:---|
|**Nanti**<br />🥇|Issue and use corporate bonds as collateral for instant payment channels.|<a href="https://github.com/cryptotuxorg/nanti-dapp" target="_blank" rel="noreferrer, noopener">Go</a>|
|**SmartKek**<br />🥈|Burn tokens to leave comments.|<a href="https://github.com/smartkek/ETHParis-graveyard" target="_blank" rel="noreferrer, noopener">Go</a>|

## ETHDenver 2019

Read our <a href="https://blog.chain.link/detailing-the-winning-chainlink-projects-from-ethdenver-hackathon/" target="_blank" rel="noreferrer, noopener">blog post here</a>.

|Name|Description|GitHub|
|:---|:---|:---|
|**EventLINK**<br />🥇|Crowdfund events using Twitter APIs, smart contracts, and staking mechanisms.|<a href="https://github.com/ConnorMaloney/EventLink" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Grand Fondo**<br />🥈|Decentralized athletic competitions using Strava.|<a href="https://github.com/tokensoft/gran-fondo" target="_blank" rel="noreferrer, noopener">Go</a>|
|**Smart Piggies**|Peer-to-peer global derivatives market.|<a href="https://github.com/smartpiggies/smartpiggies" target="_blank" rel="noreferrer, noopener">Go</a>|